# org.eclipse.cdt.old

./: README.md
android/org.eclipse.cdt.android.core/: .project
android/org.eclipse.cdt.android.ui/: .project  plugin.properties  plugin.xml
build2/org.eclipse.cdt.build.core/: README.txt  plugin.xml
build2/org.eclipse.cdt.build.ui/: plugin.xml
contrib/org.eclipse.cdt.oprofile/: REPOMOVED
contrib/org.eclipse.cdt.oprofile-home/: .project  ChangeLog  downloads.html  index.html
contrib/org.eclipse.cdt.rpm/: REPOMOVED
contrib/org.eclipse.cdt.rpm-home/: .project  ChangeLog  downloads.html  index.html
core/org.eclipse.cdt.pdom.core/: .classpath  .project  THIS_PROJECT_IS_DEPRECATED.txt  createdb.sql  createdb.xml  plugin.properties  plugin.xml
core/org.eclipse.cdt.pdom.ui/: .project  plugin.properties  plugin.xml
debug/org.eclipse.cdt.debug.win32.core/: .cdtproject  .project  README.html  build.properties  plugin.properties  plugin.xml
debug/org.eclipse.cdt.debug.win32.ui/: .project  build.properties  plugin.properties  plugin.xml
mylyn/org.eclipse.cdt.mylyn/: build.properties
old2/cdt-home/: .dates.txt  .project  cdt.css  community.html  developers.html  main-test.html  main.html  news.html  overview.html  screenshots.html  test.html
old2/org.eclipse.cdt.build.core/: plugin.xml
old2/org.eclipse.cdt.build.gnu.core/: .project  plugin.xml
old2/org.eclipse.cdt.build.ui/: plugin.xml
old2/org.eclipse.cdt.mingw/: .project
old2/org.eclipse.cdt.mingw-feature/: .project  feature.xml
old2/org.eclipse.cdt.mingw.build/: .project  plugin.properties  plugin.xml
old2/org.eclipse.cdt.mingw.debug/: .project
old2/org.eclipse.cdt.windows.debug.core.cdi/: .project  plugin.xml
old2/org.eclipse.cdt.windows.debug.native/: .cdtbuild  .project
org.eclipse.cdt.old/: dev.html  main.html
org.eclipse.cdt.old/cdt-cpp-extensions-home/: .project  dev.html  main.html
org.eclipse.cdt.old/cdt-generic-extensions-home/: dev.html  main.html
org.eclipse.cdt.old/cdt-lpex-editor-home/: dev.html  main.html
org.eclipse.cdt.old/cdt-pa-home/: dev.html  main.html
org.eclipse.cdt.old/com.ibm.debug/: epdc.jardesc  plugin.properties  plugin.xml
org.eclipse.cdt.old/com.ibm.debug.common/: .classpath  .options  .project  plugin.properties  plugin.xml
org.eclipse.cdt.old/com.ibm.debug.daemon/: .classpath  .options  .project  DaemonResources.properties  contextsDaemonDebug.xml  plugin.properties  plugin.xml
org.eclipse.cdt.old/com.ibm.debug.doc.user/: about.html  context.properties  contexts_CPPDebug.xml  doc.properties  infoset_CPPDebug.xml  navActions.xml  navTopics.xml  plugin.xml  standaloneActions.xml  toc.xml  topics_Concepts.xml  topics_Reference.xml  topics_Tasks.xml
org.eclipse.cdt.old/com.ibm.debug.pdt/: .classpath  .options  .project  about.html  contextsDebug.xml  extensions.properties  plugin.properties  plugin.xml
org.eclipse.cdt.old/com.ibm.lpex/: .classpath  .project  HelpContexts.xml  about.html  plugin.properties  plugin.xml  plugin_de.properties  plugin_es.properties  plugin_fr.properties  plugin_it.properties  plugin_ja.properties  plugin_ko.properties  plugin_pt.properties  (+2 more)
org.eclipse.cdt.old/com.ibm.lpex.doc.isv/: doc.properties  hglegal.htm  plugin.properties  plugin.xml  plugin_de.properties  plugin_es.properties  plugin_fr.properties  plugin_it.properties  plugin_ja.properties  plugin_ko.properties  plugin_pt.properties  plugin_zh_CN.properties  plugin_zh_TW.properties  topics_Reference.xml
org.eclipse.cdt.old/com.ibm.lpex.doc.user/: HelpContexts.xml  actions_view_Contents.xml  doc.properties  hglegal.htm  infoSet.xml  plugin.xml  topics.xml
org.eclipse.cdt.old/org.eclipse.cdt.cpp.miners/autoconf_templates/: Makefile.am  acconfig.h  autogen.sh  bootstrap.sc  configure.in  configure.in.no_shlib  configure.in.original  script.batch
org.eclipse.cdt.old/org.eclipse.cdt.cpp.miners/autoconf_templates/sub/: Makefile.am
org.eclipse.cdt.old/org.eclipse.cdt.cpp.miners/autoconf_templates/sub/shared/: Makefile.am
org.eclipse.cdt.old/org.eclipse.cdt.cpp.miners/autoconf_templates/sub/static/: Makefile.am  Makefile.am~
(+3525 files in other folders)
