dnl Process this file with autoconf to produce a configure script.
AC_INIT(aclocal.m4)

dnl Checks for programs.

AM_INIT_AUTOMAKE(@PACKAGE@, @VERSION@)

dnl Checks for libraries.

AC_PROG_RANLIB
AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL
AM_PROG_LIBTOOL
dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.



AC_OUTPUT(Makefile @SUBDIR/Makefile@)
