dnl Copyright (c) 2001 International Business Machines Corporation. All rights reserved.
dnl This program and the accompanying materials are made available under the terms of
dnl the Common Public License which accompanies this distribution.

dnl This file is needed to by autoconf

AC_INIT(aclocal.m4)

dnl Checks for programs.

AM_INIT_AUTOMAKE(@PACKAGE@, @VERSION@)

dnl Checks for libraries.

AC_PROG_RANLIB
AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL
AM_PROG_LIBTOOL
dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.



AC_OUTPUT(Makefile @SUBDIR/Makefile@)
