bin_PROGRAMS = !TARGET!
!TARGET!_SOURCES = 
!TARGET!_LDADD = 
SUBDIRS = 
EXTRA_DIST = 

# set the include path found by configure
INCLUDES= $(all_includes)
# the library search path.
!TARGET!_LDFLAGS = $(all_libraries) 
                                                                                
