# Copyright (c) 2001 International Business Machines Corporation. All rights reserved.
# This program and the accompanying materials are made available under the terms of
# the Common Public License which accompanies this distribution.

bin_PROGRAMS = !TARGET!
!TARGET!_SOURCES = 
!TARGET!_LDADD = 
SUBDIRS = 
EXTRA_DIST = 

# set the include path found by configure
INCLUDES= $(all_includes)
# the library search path.
!TARGET!_LDFLAGS = $(all_libraries) 
                                                                                
