# Copyright (c) 2001 International Business Machines Corporation. All rights reserved.
# This program and the accompanying materials are made available under the terms of
# the Common Public License which accompanies this distribution.

lib_LTLIBRARIES =
lib!TARGET!_la_SOURCES =
SUBDIRS =
EXTRA_DIST =

SOMAJOR = 1
SOMINOR = 0
SOSUBMINOR = 0

include_HEADERS =
noinst_HEADERS =

lib!TARGET!_la_LDFLAGS = $(all_libraries) -no-undefined -version-info $(SOMAJOR):$(SOMINOR):$(SOSUBMINOR) $(LDFLAGS)
lib!TARGET!_la_LIBADD =








