# Copyright (c) 2001 International Business Machines Corporation. All rights reserved.
# This program and the accompanying materials are made available under the terms of
# the Common Public License which accompanies this distribution.

noinst_LIBRARIES =
lib!TARGET!_a_SOURCES =

SUBDIRS =
EXTRA_DIST = 


